# local-gdpr-scanner

./: .gitignore  README.md  package-lock.json  package.json
REVIEWS/: GLM-5.1-2026-04-05.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: actions.rs  email.rs  fast_scan.rs  imap.rs  lib.rs  main.rs
src/lib/: index.ts
src/lib/components/: AVGBriefGenerator.svelte  KeyboardShortcuts.svelte
src/lib/services/: ai.ts  email.ts  oauth.ts  scan-engine.ts
src/lib/stores/: app.ts  theme.ts
src/lib/templates/: avgb-letter.ts
src/lib/workers/: scanner.worker.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/auth/callback/: +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/results/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/tools/avg-brief/: +page.svelte
