[package]
name = "local-gdpr-scanner"
version = "0.1.0"
description = "100% local GDPR email scanner"
authors = ["Frank Jan Ruiterkamp"]
edition = "2021"

[lib]
name = "local_gdpr_scanner_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-google-auth = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = { version = "0.22", features = ["tokio1-native-tls", "smtp-transport", "rustls-tls", "imap", "builder"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
