[package]
name = "local-gdpr-scanner"
version = "0.1.0"
description = "100% local GDPR email scanner"
authors = ["Frank Jan Ruiterkamp"]
edition = "2021"

[lib]
name = "local_gdpr_scanner_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# IMAP support
async-imap = "0.9"
async-native-tls = "0.3"
mail-parser = "0.9"

# TLS (for native-tls compatibility)
openssl = "0.10"

# Fast regex for quick data detection
regex = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
